feat: complete phase 2 security improvements